# CarbonEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README  compilelist.txt  toolchain.cmake
Atlas/: Atlas.hpp  CMakeLists.txt  Output_type.hpp  main.cpp
Shaders/: comp.glsl  compile.sh  frag.glsl  frag.text.glsl  shadow.glsl.frag  shadow.glsl.vert  text.comp  vert.glsl  vert.text.glsl
Shaders/Debug/: Line.frag  Line.vert
Shaders/Generic/: Lit.frag  Unlit.frag  Unlit.vert
Shaders/ctext/: ctext.frag.glsl  ctext.vert.glsl  msdf.frag.glsl  mtsdf.frag.glsl  sdf.frag.glsl  test.comp.glsl
UIX/: CMakeLists.txt
UIX/include/: UIX.hpp  UIX_Tests.hpp  UIX_TextRenderer.hpp  stdafx.hpp
UIX/src/: UIX.cpp  main.cpp
common/: cvar.h  err.h  mem.h  printf.h  stdafx.h  string.h  timer.h
common/containers/: atlas.h  bitset.h  dynarray.h  freelist.h  hashmap.h  heap.h  string.h  vector.h
common/math/: mat.h  math.h  vec2.h  vec3.h  vec4.h
impact/: CMakeLists.txt
impact/include/: impact.h
impact/src/: impact.c
include/: AssetLoader.hpp  BitmapTextRenderer.hpp  Bootstrap.hpp  CFTextRenderer.hpp  CFont.hpp  CString.hpp  CTextRenderer.hpp  Camera.hpp  Carbon.hpp  Context.hpp  DMalloc.hpp  DynamicDescriptors.hpp  Image.hpp  Input.hpp  LEGACYTextRenderer.hpp  Renderer.hpp  ResourceManager.h  Shaders.hpp  TextRenderer.hpp  bee.h  camera.h  camera.hpp  catlas.h  cbinarytree.h  cbuffer.h  cdevicememory.h  cengine.h  cengine.hpp  cengineinit.h  cengineinit.hpp  cgbitset.h  cgcontstdafx.h  cgfreelist.h  cgfx.h  cgfxdef.h  cgfxpipeline.h  cgfxstdafx.h  cghashmap.h  cgstring.h  cgvector.h  (+53 more)
include/CArrays/: CVector.hpp
include/GPU/: buffer.h  descriptors.h  format.h  lunaVK.h  memory.h  pipeline.h  texture.h  vk.h  vkstdafx.h
include/carrays/: carray.hpp  csignal.hpp  cvector.hpp
include/common/: fontc.h  lunaImage.h  mem.h  printf.h  stdafx.h  str.h  string.h  timer.h
include/containers/: callocator.hpp  carray.hpp  catlas.h  cbinarytree.h  cbitset.h  cbitset.hpp  cgbitset.h  cgfreelist.h  cghashmap.h  cgstring.h  cgvector.h  chashmap.h  chashmap.hpp  clinkedlist.hpp  credblacktree.h  csignal.hpp  cstring.h  cstring.hpp  cvector.h  cvector.hpp  stdafx.h
include/engine/: UI.h  camera.h  camera.hpp  cengine.h  collider.h  cshadermanager.h  cshadermanagerdev.h  ctext.h  editor.h  engine.h  fontc.h  image.h  input.h  lunaCamera.h  lunaCollider.h  lunaGFX.h  lunaGFXDef.h  lunaGFXstdafx.h  lunaImage.h  lunaInput.h  lunaObject.h  lunaObjectDef.h  lunaScene.h  lunaSprite.h  lunaSpriteRenderer.h  lunaUI.h  object.h  renderer.h  scene.h  shadermanager.h  shadermanagerdev.h  sprite.h  sprite_renderer.h
include/engine/ctext/: ctext.hpp
include/engine/object/: cgameobject.hpp  mesh.hpp
include/math/: mat.h  mat.hpp  mat4.h  math.h  vec2.h  vec2.hpp  vec3.h  vec3.hpp  vec4.h  vec4.hpp
include/sys/io/: printf.h
include/textures/: textures.hpp
include/types/: coptional.hpp  csmartptrs.hpp
include/vector/: vec2.hpp
include/vkcb/: Bootstrap.hpp  Context.hpp  LEGACYTextRenderer.hpp  Renderer.hpp  cobject.hpp  cvk.hpp  epichelperlib.hpp  pro.hpp  stdafx.h  vkcbstdafx.hpp
src/: AssetLoader.cpp  BitmapTextRenderer.cpp  Bootstrap.cpp  CFTextRenderer.cpp  CFont.cpp  CTextRenderer.cpp  Context.cpp  DMalloc.cpp  DynamicDescriptors.cpp  Image.cpp  LEGACYTextRenderer.cpp  Renderer.cpp  ResourceManager.cpp  TextRenderer.cpp  atlas.hpp  catlas.c  cbinarytree.c  cbuffer.c  cengine.c  cengine.cpp  cengineinit.c  cengineinit.cpp  cgbitset.c  cgfx.c  cgfx.cpp  cgfxpipeline.c  cghashmap.c  cgstring.c  cgvector.c  cimage.c  cimageio.c  cimageload.c  cinput.c  cinput.cpp  common.c  containers.c  containersunity.c  core.c  credblacktree.c  crenderdevice.c  (+25 more)
src/Shaders/: comp.text.spv  frag.spv  shadow.vert.spv  vert.spv  vert.text.spv
src/Shaders/Generic/: Unlit.frag.spv  Unlit.vert.spv
src/Shaders/ctext/: text.spv
src/containers/: catlas.c  cbinarytree.c  cbitset.c  chashmap.c  containersunity.c  credblacktree.c  cstring.c  cvector.c  cvectornew.c
src/engine/ctext/: ctext.cpp
src/engine/object/: cgameobject.cpp
src/vkcb/: Bootstrap.cpp  Context.cpp  LEGACYTextRenderer.cpp  Renderer.cpp  cobject.cpp  cshader_manager.c  cvk.cpp  epichelperlib.cpp  pro.cpp
